# TaskManager

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: backend.yml  lint.yml
backend/: Dockerfile  mypy.ini  pyproject.toml
backend/src/: __main__.py
backend/src/application/api/controllers/: main.py
backend/taskmanager/: __main__.py
backend/taskmanager/application/api/: main.py
backend/taskmanager/application/api/controllers/: main.py
backend/taskmanager/domain/common/entities/: __init__.py  aggregate_root.py  base.py
backend/taskmanager/domain/common/events/: __init__.py  base.py
backend/taskmanager/domain/common/exceptions/: __init__.py  base.py
backend/taskmanager/domain/common/values/: __init__.py  base.py
backend/taskmanager/domain/user/: user.py
backend/taskmanager/domain/user/exceptions/: __init__.py  full_name.py  username.py
backend/taskmanager/domain/user/values/: __init__.py  full_name.py  user_id.py  username.py
backend/taskmanager/presentation/api/: main.py
backend/taskmanager/presentation/api/controllers/: main.py
backend/tests/: conftest.py
backend/tests/domain/user/values/: test_full_name.py  test_username.py
deployment/: docker-compose.dev.yaml  docker-compose.prod.yaml
src/application/api/: main.py
src/application/api/controllers/routers/: default.py
