[tool.poetry]
name = "taskmanager"
version = "0.1.0"
description = ""
authors = ["eggunof <eggunof@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pylint = "^3.1.0"
mypy = "^1.9.0"
black = "^24.3.0"

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = '''
(
    /.git
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
